# Python-OrangeData

./: example.py  pyproject.toml
orangedata/: client.py
