[tool.poetry]
name = "python-orangedata"
version = "0.1.0"
description = "Fork python-orangedata for poetry"
authors = ["Алексей"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pycryptodome = "^3.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
